# esp32-isotp-ble-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  enabled  sdkconfig  sdkconfig.old
client/: client.py
main/: CMakeLists.txt  arbitration_identifiers.c  arbitration_identifiers.h  ble_callbacks.c  ble_callbacks.h  ble_server.c  ble_server.h  can.cpp  can.h  connection_handler.c  connection_handler.h  constants.h  eeprom.c  eeprom.h  endian_helpers.c  isotp.c  isotp.h  isotp_ble_bridge_main.c  isotp_callbacks.c  isotp_callbacks.h  isotp_config.h  isotp_defines.h  isotp_link_containers.c  isotp_link_containers.h  isotp_links.c  isotp_links.h  isotp_tasks.c  isotp_tasks.h  isotp_user.h  led.c  led.h  main.c  main.cpp  messages.h  mutexes.h  periodic_messages.c  periodic_messages.h  persist.c  persist.h  queues.h  (+13 more)
main/__history/: uart.c.~1~
release/: readme.md  updater_com3.bat
